resolve layout problems in game.

--- a/css/game.css
+++ b/css/game.css
@@ -16,7 +16,7 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   width: 80vw;
-  height: 500px;
+  height: 300px;
   border: 2px solid rgb(148, 147, 147);
 }
 
@@ -30,7 +30,7 @@ html {
   width: 20px;
   height: 100px;
   position: relative;
-  top: 400px;
+  top: 200px;
   left: 10px;
 }
 .dinosaur {
@@ -46,7 +46,7 @@ html {
   width: 20px;
   height: 50px;
   position: relative;
-  top: 350px;
+  top: 150px;
   left: 490px;
   animation: block-move 1.5s infinite linear;
 }
@@ -89,16 +89,16 @@ html {
 
 @keyframes jump {
   0% {
-    top: 400px;
+    top: 200px;
   }
   30% {
-    top: 350px;
+    top: 150px;
   }
   70% {
-    top: 350px;
+    top: 150px;
   }
   100% {
-    top: 400px;
+    top: 200px;
   }
 }
 
@@ -109,7 +109,6 @@ body {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%2377aa77'/%3E%3Cstop offset='1' stop-color='%234fd'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%23cf8' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23cf8' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'%3E%3Cstop offset='0' stop-color='%23cf8' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23cf8' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
   background-attachment: fixed;
   background-size: cover;
-  position: relative;
 }
 
 .restart-button {
@@ -127,6 +126,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 3rem;
 }
 
 .home-button {
@@ -146,17 +146,20 @@ body {
 }
 
 .highscore {
-  position: absolute;
-  top: 10rem;
-  left: 2rem;
   color: green;
   font-size: 3rem;
 }
 
+.score-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 4rem;
+}
+
 .score {
-  position: absolute;
-  top: 15rem;
-  left: 2rem;
   color: dodgerblue;
   font-size: 3rem;
 }
