--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ body {
 }
 
 .instructions {
-  padding-left: 2rem;
+  padding-left: 2.3rem;
   padding-right: 1rem;
 }
 
